# authforge-python

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  authforge.py  generate_vectors.py  pyproject.toml  test_authforge.py
.github/workflows/: ci.yml  release.yml
authforge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
